--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,28 @@
     border-radius:10px;
 }
 
+.videoSimi{
+    color: white;
+    display: inline-block;
+    padding: 1%;
+    margin: 2%;
+    text-align: center;
+    background-color: #292b2c;
+    box-shadow:0px 2px 10px rgba(0,0,0,0.3);
+    border-style: solid;
+    border-color: white;
+    border-radius:10px;
+}
+
+.DivVideoSimi{
+    color: white;
+    margin: 2%;
+    background-color: #292b2c;
+    box-shadow:0px 2px 10px rgba(0,0,0,0.3);
+    border-radius:10px;
+}
+
+
 .DivData{
     color: white;
     padding: 50px ;
@@ -16,6 +38,8 @@
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
     border-radius:10px;
 }
+
+
 
 .InfoFile{
     border-right: solid;
