--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,28 @@
     border-radius:10px;
 }
 
+.DivTools{
+    color: white;
+    text-align: center;
+    padding: 10px ;
+    width: 50%;
+    margin: 30px auto;
+    background-color: #292b2c;
+    box-shadow:0px 2px 10px rgba(0,0,0,0.3);
+    border-radius:10px;
+}
+
+.buuttonAdmin{
+    color: white;
+    text-align: center;
+    padding: 10px ;
+    width: 50%;
+    margin: 30px;
+    background-color: #292b2c;
+    box-shadow:0px 2px 10px rgba(0,0,0,0.3);
+    border-radius:10px;
+}
+
 .videoSimi{
     color: white;
     display: inline-block;
@@ -34,6 +56,7 @@
 .DivData{
     color: white;
     padding: 50px ;
+    margin: 30px;
     background-color: #292b2c;
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
     border-radius:10px;
@@ -92,4 +115,13 @@
     background-color: #292b2c;
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
     border-radius:10px;
+}
+
+.signature {
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    color: #fff;
 }
