--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,17 @@
     text-align: center;
     padding: 10px ;
     width: 50%;
-    margin: 30px auto;
+    margin: 30px;
+    background-color: #292b2c;
+    box-shadow:0px 2px 10px rgba(0,0,0,0.3);
+    border-radius:10px;
+}
+
+.DivDataInfo{
+    color: white;
+    padding: 10px ;
+    width: 50%;
+    margin: 30px;
     background-color: #292b2c;
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
     border-radius:10px;
@@ -98,7 +108,7 @@
 }
 
 #sigma-container {
-    width: 90%;
+    width: 95%;
     height: 500px;
     margin: 30px auto;
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
@@ -111,7 +121,7 @@
     color: white;
     text-align: center;
     padding: 50px ;
-    margin: 30px auto;
+    margin: 30px;
     background-color: #292b2c;
     box-shadow:0px 2px 10px rgba(0,0,0,0.3);
     border-radius:10px;
